--- a/style.css
+++ b/style.css
@@ -64,7 +64,49 @@ header {
     animation: pulse 2s infinite;
     font-family: 'Microgramma-D-Extended-Bold', sans-serif;
 }
+.parallax-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 
+.parallax-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translateZ(-1px) scale(2);
+}
+
+.header-content {
+    position: relative;
+    z-index: 1;
+}
+.header-content h1 {
+    font-size: 5rem;
+    color: var(--primary);
+    text-shadow: 0 0 10px rgba(255, 222, 89, 0.7);
+    animation: pulse 2s infinite;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
+}
+.header-content h2 {
+    font-size: 2rem;
+    color: var(--light);
+    margin-top: 1rem;
+    text-shadow: 0 0 10px rgba(255, 222, 89, 0.7);
+    animation: pulse 2s infinite;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
+}
+.header-content h3 {
+    font-size: 1.5rem;
+    color: var(--light);
+    margin-top: 1rem;
+    text-shadow: 0 0 10px rgba(255, 222, 89, 0.7);
+    animation: pulse 2s infinite;
+    font-family: 'Microgramma-D-Extended-Bold', sans-serif;
+}
 @keyframes pulse {
     0% { text-shadow: 0 0 10px rgba(255, 222, 89, 0.7); }
     50% { text-shadow: 0 0 20px rgba(255, 222, 89, 0.9); }
